# gb_server

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  _README.md  _check_boost_src.bat  conanfile.py  install_deps.bat  install_deps.sh  start_process.bat  start_process.sh  uninstall_deps.bat  uninstall_deps.sh
3rd/: packages.json  setup.bat  setup.py  setup.sh  uninstall.bat  uninstall.py  uninstall.sh
cmake/: base.cmake  def.cmake
log4/: db_test_report.txt
profiles/: clang_debug_pr  clang_release_pr  gcc_debug_pr  gcc_release_pr  linux_debug_profile  linux_release_profile  msvc_debug_pr  msvc_release_pr  win_release_profile
protobuf/: meta.pb.h  msg.pb.h
res/config/: nats_config.xml  server_config.xml
res/proto/: proto.bat
script/: db_test_lua_redis_pg.lua  db_test_lua_test.lua  main.lua  start_debug.lua  test.lua  test_db.lua
server/gateway_server/: CMakeLists.txt  GatewayApp.cpp  GatewayApp.h  main.cpp
server/login_server/: CMakeLists.txt  LoginApp.cpp  LoginApp.h  main.cpp
server/scene_server/: CMakeLists.txt  SceneApp.cpp  SceneApp.h  main.cpp
src/: boost_stubs.cpp
src/app/: app.cpp  app.h  app_def.cpp  app_def.h  server_app.cpp  server_app.h  types.cpp  types.h
src/async/: shutdown.cpp  shutdown.h  signal_handler.h  thread_pool.h  thread_pool_scheduler.h
src/base/: res_path.cpp  res_path.h  singleton.h  util_string.h
src/common/: res_path.cpp  res_path.h  util_string.h
src/common/shutdown/: shutdown_manager.cpp  shutdown_manager.h
src/common/signal/: signal_handler.cpp  signal_handler.h
src/common/timer/: timer_manager.cpp  timer_manager.h
src/common/worker/: worker.cpp  worker.h  worker_manager.cpp  worker_manager.h
src/db/: db_config.h  db_connection.h  db_pool.cpp  db_pool.h  db_result.h  db_value.h
src/db/mysql/: mysql_connection.cpp  mysql_connection.h  mysql_test.h
src/db/postgres/: db_config.h  db_connection.h  db_pool.cpp  db_pool.h  db_postgres.cppm  db_result.h  db_value.h  pg_connection.cpp  pg_connection.h  register_postgresql.cpp  register_postgresql.h
src/db/redis/: db_redis.cppm  redis_config.h  redis_connection.cpp  redis_connection.h  redis_pool.cpp  redis_pool.h  redis_test.cpp  redis_test.h  register_redis.cpp  register_redis.h
src/log/: log.cpp  log.h  log_help.cpp  log_help.h
src/msgpack/: msgpack.cpp  msgpack.hpp
src/network/: message_meta.h  network_function.hpp
src/network/http/: http_client.cpp  http_client.h  http_common.h  http_server.cpp  http_server.h  http_server_internal.h  http_session.cpp  http_session.h  https_session.cpp  https_session.h
src/network/io/: buffer_pack.hpp  client.cpp  client.h  handle_interface.h  io_service_pool.cpp  io_service_pool.h  listener.h  message_meta.h  server.cpp  server.h  session.cpp  session.h  timer_worker.cpp  timer_worker.h
src/network/io_service_pool/: io_service_pool.cpp  io_service_pool.h
src/network/manager/: network_manager.cpp  network_manager.h
src/network/msgpack/: msgpack.cpp  msgpack.hpp
src/network/nats/: nats_manager.cpp  nats_manager.h  register_nats.cpp
src/network/net/: client.cpp  client.h  handle_interface.h  listener.cpp  listener.h  server.cpp  server.h
src/network/net_manager/: network_manager.cpp  network_manager.h
src/network/router/: lock_free_route_table.h  message_type.h  route_table.h  router.cpp  router.h  service_worker_type.h
src/network/rpc/: executor.h  function.hpp  register_rpc.cpp  register_rpc.h  rpc_call.cpp  rpc_call.h  rpc_coro.h  rpc_function.hpp  rpc_function_help.cpp  rpc_function_help.h  rpc_reply.cpp  rpc_reply.h  rpc_threadlocal.h  rpc_timer_pool.cpp  rpc_timer_pool.h
src/network/scheduler/: executor.h
src/network/session/: session.cpp  session.h
src/network/timer_worker/: timer_worker.cpp  timer_worker.h
src/protobuf/: meta.pb.cc  msg.pb.cc
src/script/: lua_pb_parse.cpp  lua_pb_parse.h  register_proto_msg.cpp  register_script.cpp  register_script.h  script.cpp  script.h
src/timer/: register_timer.cpp  timer_manager.cpp  timer_manager.h
src/worker/: worker.cpp  worker.h  worker_logic_interface.h  worker_manager.cpp  worker_manager.h
test/client_test/: CMakeLists.txt  MyApp.cpp  MyApp.h  main.cpp  mysql_test_exmple.cpp  test.cpp  test.h
test/db_test/: CMakeLists.txt  lua_test.cpp  lua_test.h  main.cpp  pg_test.cpp  pg_test.h  redis_test.cpp  redis_test.h  report.h
test/server_test/: CMakeLists.txt  MyApp.cpp  MyApp.h  main.cpp  test.cpp  test.h
test/unit_test/: CMakeLists.txt  app_test.cpp  app_test.h  main.cpp  msgpack_test.cpp  route_test.cpp  scheduler_test.cpp  timer_test.cpp
tools/: utf8.py
tools/luasocket/: CMakeLists.txt  mime.vcxproj  socket.vcxproj
